[package]
name = "gsm_tools_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
time = { version = "0.3", features = ["macros", "local-offset"] }
calamine = "0.26"
regex = "1"
duckdb = { version = "1", features = ["bundled"] }
rayon = "1"
sysinfo = "0.30"
blake3 = "1"
smallvec = "1"