[package]
name = "gsm_tools_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
time = { version = "0.3", features = ["macros", "local-offset"] }
regex = "1"
duckdb = { version = "1", features = ["bundled"] }
# Parallel xử lý nhiều file
rayon = "1.8"
# CPU detect
num_cpus = "1.16"
# Hash nếu project bạn dùng
blake3 = "1"
